# rts-mock-tool

./: .dockerignore  .env.example  .gitignore  1.txt  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/mock_tool/: __init__.py  generate_jwt.py  kafka_connection.py  kafka_viewer.py  live_chat.py  logging_config.py  server.py  settings.py  ws_driver.py
src/mock_tool/samples/: live_chat_sample.csv
src/mock_tool/static/: index.html  mock-console.css  mock-console.js
tests/: conftest.py  test_kafka_connection.py  test_kafka_viewer.py  test_live_chat.py  test_mock_tool_generate_jwt.py  test_mock_tool_kafka_viewer_coverage.py  test_mock_tool_live_chat_coverage.py  test_mock_tool_load_metrics.py  test_mock_tool_logging_config.py  test_mock_tool_server_coverage.py  test_mock_tool_server_kafka.py  test_mock_tool_server_live_chat.py  test_mock_tool_settings.py  test_mock_tool_ws_driver.py  test_mock_tool_ws_driver_coverage.py
